--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,12 @@ flutter:
     - family: MontserratVariable
       fonts:
         - asset: assets/fonts/Montserrat-VariableFont_wght.ttf
+    - family: PretendardBold
+      fonts:
+        - asset: assets/fonts/Pretendard-Bold.otf
+    - family: Pretendard
+      fonts:
+        - asset: assets/fonts/Pretendard-Medium.otf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
