--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.5
+  firebase_auth: ^4.4.0
+  firebase_core: ^2.9.0
 
 dev_dependencies:
   flutter_test:
